// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`inline-notice > passes through additional html attributes 1`] = `
<div
  class="inline-notice inline-notice--attention class1"
  data-passed-through="true"
  data-testid="AttributePassthrough"
  style="color:red"
  type="number"
>
  <span
    class="inline-notice__header"
    id="s0-0-status"
  >
    <svg
      aria-label="Heading Text"
      class="icon icon--16"
      focusable="false"
      role="img"
    >
      <defs>
        <symbol
          id="icon-attention-filled-16"
          viewBox="0 0 16 16"
        >
          <path
            d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0Zm0 12a1 1 0 1 1 0-2 1 1 0 0 1 0 2Zm1-4a1 1 0 1 1-2 0V5a1 1 0 0 1 2 0v3Z"
          />
        </symbol>
      </defs>
      <use
        href="#icon-attention-filled-16"
      />
    </svg>
  </span>
  <span
    class="inline-notice__main"
  >
    <!--F#14-->
    Content
    <!--F/-->
  </span>
</div>
`;

exports[`inline-notice > passes through additional html attributes 2`] = `
<div
  class="inline-notice inline-notice--attention class1"
  data-passed-through="true"
  data-testid="AttributePassthrough"
  style="color:red"
  type="number"
>
  <span
    class="inline-notice__header"
    id="s0-0-status"
  >
    <svg
      aria-label="Heading Text"
      class="icon icon--16"
      focusable="false"
      role="img"
    >
      <defs>
        <symbol
          id="icon-attention-filled-16"
          viewBox="0 0 16 16"
        >
          <path
            d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0Zm0 12a1 1 0 1 1 0-2 1 1 0 0 1 0 2Zm1-4a1 1 0 1 1-2 0V5a1 1 0 0 1 2 0v3Z"
          />
        </symbol>
      </defs>
      <use
        href="#icon-attention-filled-16"
      />
    </svg>
  </span>
  <span
    class="inline-notice__main"
  >
    <!--F#14-->
    Content
    <!--F/-->
  </span>
</div>
`;

exports[`inline-notice > renders with custom status type 1`] = `
<div
  class="inline-notice inline-notice--confirmation"
>
  <span
    class="inline-notice__header"
    id="s0-0-status"
  >
    <svg
      aria-label="Heading Text"
      class="icon icon--16"
      focusable="false"
      role="img"
    >
      <defs>
        <symbol
          id="icon-confirmation-filled-16"
          viewBox="0 0 16 16"
        >
          <path
            clip-rule="evenodd"
            d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8Zm11.207-.793a1 1 0 0 0-1.414-1.414L7 8.586l-.793-.793a1 1 0 0 0-1.414 1.414l1.5 1.5a1 1 0 0 0 1.414 0l3.5-3.5Z"
            fill-rule="evenodd"
          />
        </symbol>
      </defs>
      <use
        href="#icon-confirmation-filled-16"
      />
    </svg>
  </span>
  <span
    class="inline-notice__main"
  >
    <!--F#14-->
    Content
    <!--F/-->
  </span>
</div>
`;

exports[`inline-notice > renders with defaults 1`] = `
<span
  class="inline-notice__header"
  id="s0-0-status"
>
  <svg
    aria-label="Heading Text"
    class="icon icon--16"
    focusable="false"
    role="img"
  >
    <defs>
      <symbol
        id="icon-attention-filled-16"
        viewBox="0 0 16 16"
      >
        <path
          d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0Zm0 12a1 1 0 1 1 0-2 1 1 0 0 1 0 2Zm1-4a1 1 0 1 1-2 0V5a1 1 0 0 1 2 0v3Z"
        />
      </symbol>
    </defs>
    <use
      href="#icon-attention-filled-16"
    />
  </svg>
</span>
`;

exports[`inline-notice > renders with defaults 2`] = `
<div
  class="inline-notice inline-notice--attention"
>
  <span
    class="inline-notice__header"
    id="s0-0-status"
  >
    <svg
      aria-label="Heading Text"
      class="icon icon--16"
      focusable="false"
      role="img"
    >
      <defs>
        <symbol
          id="icon-attention-filled-16"
          viewBox="0 0 16 16"
        >
          <path
            d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0Zm0 12a1 1 0 1 1 0-2 1 1 0 0 1 0 2Zm1-4a1 1 0 1 1-2 0V5a1 1 0 0 1 2 0v3Z"
          />
        </symbol>
      </defs>
      <use
        href="#icon-attention-filled-16"
      />
    </svg>
  </span>
  <span
    class="inline-notice__main"
  >
    <!--F#14-->
    Content
    <!--F/-->
  </span>
</div>
`;

exports[`inline-notice > renders with defaults 3`] = `
<span
  class="inline-notice__main"
>
  <!--F#14-->
  Content
  <!--F/-->
</span>
`;

exports[`inline-notice > renders with warning status type 1`] = `
<div
  class="inline-notice inline-notice--warning"
>
  <span
    class="inline-notice__header"
    id="s0-0-status"
  >
    <svg
      aria-label="Heading Text"
      class="icon icon--16"
      focusable="false"
      role="img"
    >
      <defs>
        <symbol
          id="icon-attention-triangle-filled-16"
          viewBox="0 0 16 16"
        >
          <path
            d="M5.156 1.668c1.239-2.223 4.436-2.224 5.677-.003l4.75 8.503c1.21 2.166-.356 4.835-2.837 4.836h-9.49c-2.48 0-4.048-2.666-2.84-4.832l4.74-8.504ZM7.999 10a1 1 0 1 0 0 2.001 1 1 0 0 0 0-2.001Zm0-5a1 1 0 0 0-1 1v2a1 1 0 0 0 2 0V6a1 1 0 0 0-1-1Z"
          />
        </symbol>
      </defs>
      <use
        href="#icon-attention-triangle-filled-16"
      />
    </svg>
  </span>
  <span
    class="inline-notice__main"
  >
    <!--F#14-->
    Content
    <!--F/-->
  </span>
</div>
`;
